cambio estilo y añadido imagen con prompt

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -37,7 +37,7 @@
     <ion-menu-toggle>
       <ion-item [routerLink]="['/home']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="home-outline"></ion-icon>
-        <ion-label>Home</ion-label>
+        <ion-label>Biblioteca</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/ver-prestamos-pendientes']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="calendar-number-outline"></ion-icon>
