--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -39,7 +39,8 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-searchbar placeholder="Buscar Título" inputmode="text" type="text" (ionInput)="buscar($event)" [debounce]="500" class="ion-margin-vertical"></ion-searchbar>
+  <ion-searchbar placeholder="Buscar Título" inputmode="text" type="text" (ionInput)="buscar($event)" [debounce]="500"
+    class="ion-margin-vertical"></ion-searchbar>
 
   <div *ngIf="this.segmentoElegido === 'todos'">
     <div *ngIf="libros.length !== 0; else elseBlock1">
@@ -57,14 +58,19 @@
     </div>
 
   </div>
-  <ng-template #elseBlock1 class="ion-margin-vertical">
-    <ion-title>No tienes libros en tu biblioteca</ion-title>
+  <ng-template #elseBlock1 class="ion-margin-vertical ion-margin-start">
+    <ion-card>
+      <ion-card-header>
+        <ion-title>No tienes libros en tu biblioteca</ion-title>
+      </ion-card-header>
+    </ion-card>
   </ng-template>
 
 
   <div *ngIf="this.segmentoElegido === 'leidos'">
     <div *ngIf="librosLeidos.length !== 0; else elseBlock2">
-      <ion-card *ngFor="let libro of librosLeidos | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)" mode="ios">
+      <ion-card *ngFor="let libro of librosLeidos | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)"
+        mode="ios">
         <ion-img [src]="libro.imagen ? libro.imagen : '../../../assets/images/no-imagen.png'"></ion-img>
         <ion-card-header>
           <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
@@ -78,13 +84,18 @@
     </div>
   </div>
   <ng-template #elseBlock2 class="ion-margin-vertical ion-margin-start">
-    <ion-title *ngIf="this.libros.length === 0">No tienes libros en tu biblioteca</ion-title>
-    <ion-title *ngIf="this.libros.length !== 0">Aún no has leido ningún libro</ion-title>
+    <ion-card>
+      <ion-card-header>
+        <ion-title *ngIf="this.libros.length === 0">No tienes libros en tu biblioteca</ion-title>
+        <ion-title *ngIf="this.libros.length !== 0">Aún no has leido ningún libro</ion-title>
+      </ion-card-header>
+    </ion-card>
   </ng-template>
 
   <div *ngIf="this.segmentoElegido === 'pendientes'">
     <div *ngIf="librosPendientes.length !== 0; else elseBlock3">
-      <ion-card *ngFor="let libro of librosPendientes | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)" mode="ios">
+      <ion-card *ngFor="let libro of librosPendientes | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)"
+        mode="ios">
         <ion-img [src]="libro.imagen ? libro.imagen : '../../../assets/images/no-imagen.png'"></ion-img>
         <ion-card-header>
           <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
@@ -97,9 +108,13 @@
       </ion-card>
     </div>
   </div>
-  <ng-template #elseBlock3 class="ion-margin-vertical">
-    <ion-title *ngIf="this.libros.length === 0">No tienes libros en tu biblioteca</ion-title>
-    <ion-title *ngIf="this.libros.length !== 0">Has leído toda tu biblioteca</ion-title>
+  <ng-template #elseBlock3 class="ion-margin-vertical ion-margin-start">
+    <ion-card>
+      <ion-card-header>
+        <ion-title *ngIf="this.libros.length === 0">No tienes libros en tu biblioteca</ion-title>
+        <ion-title *ngIf="this.libros.length !== 0">Has leído toda tu biblioteca</ion-title>
+      </ion-card-header>
+    </ion-card>
   </ng-template>
 
 
