--- a/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
+++ b/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Préstamos</ion-title>
-    
+
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
@@ -9,7 +9,7 @@
 
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-text-wrap ion-padding">
+<ion-content [fullscreen]="true" class="ion-text-wrap ion-padding-vertical">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Préstamos</ion-title>
@@ -22,8 +22,11 @@
           <ion-thumbnail class="ion-margin-end">
             <img src="../../../assets/images/prestamo.png"/>
           </ion-thumbnail>
-          <ion-label>{{p.fecha | date}}</ion-label>
-          <ion-label class="ion-text-wrap">{{p.titulo | uppercase}}</ion-label>
+          <ion-label>
+            <h2><strong>Fecha:</strong> {{p.fecha | date}}</h2>
+            <h2><strong>Libro: </strong>{{p.titulo | uppercase}}</h2>
+            <h2><strong>Prestado a: </strong>{{p.prestado_a}}</h2>
+          </ion-label>
         </ion-item>
 
         <ion-item-options side="start" (ionSwipe)="marcarDevuelto()">
@@ -34,7 +37,7 @@
 
         <ion-item-options side="end">
           <ion-item-option>
-            <ion-icon name="pencil-outline" slot="icon-only"></ion-icon>
+            <ion-icon name="create-outline" slot="icon-only"></ion-icon>
           </ion-item-option>
           <ion-item-option color="danger" (click)="confirmarEliminarPrestamo(p)">
             <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
@@ -42,6 +45,7 @@
         </ion-item-options>
       </ion-item-sliding>
   </ion-list>
+
 
   <ng-template #elseBlock class="ion-margin-vertical">
     <ion-card>
