--- a/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
+++ b/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
@@ -36,7 +36,7 @@
         </ion-item-options>
 
         <ion-item-options side="end">
-          <ion-item-option>
+          <ion-item-option (click)="abrirPrestamo(p)">
             <ion-icon name="create-outline" slot="icon-only"></ion-icon>
           </ion-item-option>
           <ion-item-option color="danger" (click)="confirmarEliminarPrestamo(p)">
