--- a/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
+++ b/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
@@ -17,33 +17,33 @@
   </ion-header>
 
   <ion-list *ngIf="this.prestamos?.length !== 0; else elseBlock">
-      <ion-item-sliding *ngFor="let p of prestamos" #devolver class="ion-margin-vertical">
-        <ion-item (click)="this.abrirPrestamo(p)">
-          <ion-thumbnail class="ion-margin-end">
-            <img src="../../../assets/images/prestamo.png"/>
-          </ion-thumbnail>
-          <ion-label>
-            <h2><strong>Fecha:</strong> {{p.fecha | date}}</h2>
-            <h2 class="ion-text-capitalize ion-text-wrap"><strong>Libro: </strong>{{p.titulo}}</h2>
-            <h2><strong>Prestado a: </strong>{{p.prestado_a}}</h2>
-          </ion-label>
-        </ion-item>
+    <ion-item-sliding *ngFor="let p of prestamos" #devolver class="ion-margin-vertical">
+      <ion-item>
+        <ion-thumbnail class="ion-margin-end">
+          <img src="../../../assets/images/prestamo.png" />
+        </ion-thumbnail>
+        <ion-label>
+          <h2><strong>Fecha:</strong> {{p.fecha | date}}</h2>
+          <h2 class="ion-text-capitalize ion-text-wrap"><strong>Libro: </strong>{{p.titulo}}</h2>
+          <h2><strong>Prestado a: </strong>{{p.prestado_a}}</h2>
+        </ion-label>
+      </ion-item>
 
-        <ion-item-options side="start" (ionSwipe)="marcarDevuelto(p)">
-          <ion-item-option color="success">
-            <ion-icon slot="icon-only" name="checkmark-done-outline"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
+      <ion-item-options side="start" (ionSwipe)="marcarDevuelto(p)">
+        <ion-item-option color="success">
+          <ion-icon slot="icon-only" name="checkmark-done-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
 
-        <ion-item-options side="end">
-          <ion-item-option (click)="abrirPrestamo(p)">
-            <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-          </ion-item-option>
-          <ion-item-option color="danger" (click)="confirmarEliminarPrestamo(p)">
-            <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
+      <ion-item-options side="end">
+        <ion-item-option (click)="abrirPrestamo(p)">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="confirmarEliminarPrestamo(p)">
+          <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
 
